vlib/v/checker/tests/invalid_comptime_test.vv
$fn func(a int) int {
    return a + a
}

fn main() {
    println(func(5))
}